[package]
name = "jvm_filter"
version = "0.1.0"
authors = ["Christer Sandberg <christer.sandberg@svt.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni-sys = "0.3.0"

[build-dependencies]
walkdir = "2"

[profile.release]
panic = 'abort'
