[package]
name = "srf_filter"
version = "0.1.0"
authors = ["Christer Sandberg <christer.sandberg@svt.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
cairo-sys-rs = "0.9.1"
libc = "0.2"
protobuf = "2.12.0"
regex = "1"

[dependencies.cairo-rs]
version = "0.8.1"
features = ["png"]
default-features = false

[profile.release]
panic = 'abort'
