[package]
name = "svg_filter"
version = "0.1.0"
authors = ["Finn Hermansson <finn.hermansson@svt.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.3.3"
lazy_static = "1.4.0"

[dependencies.resvg]
version = "0.9.0"
default-features = false
features = ["cairo-backend"]

[profile.release]
panic = 'abort'
